continued to update blog UI

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Blog</title>
 </head>
 <body>
-    <img class="centerImg imgStyle" src="https://ichef.bbci.co.uk/news/400/cpsprodpb/3C98/production/_110521551_gettyimages-669723166.jpg" />
+    <img class="centerImg imgStyle" src="https://www.thoughtco.com/thmb/1f9pgBILAuiBB_WCYGO9ruqTd0Q=/1885x1414/smart/filters:no_upscale()/GettyImages-581746281-59f28a53685fbe00116418fc.jpg" />
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvBar" aria-controls="nvBar" aria-expanded="false" aria-label="Toggle navigation">
