--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<a class="nav-link" href="#"><span class="navBarItem">Create Entry</span></a>
             </li>
             <li class="nav-item active">
-							<a class="nav-link" href="#"><span class="navBarItem">About</span></a>
+							<a class="nav-link" href="About"><span class="navBarItem">About</span></a>
             </li>
           </ul>
         </div>
